[package]
name = "main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "one-time"
path = "src/one_time.rs"

[[bin]]
name = "long"
path = "src/long.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camera = {path="../camera"}
config = {path="../config"}
info = {path="../info"}
system = {path="../system"}
utils = {path = "../utils"}
scrapper = {path = "../scrapper"}
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.36.0", features = ["rt-multi-thread", "macros"] }


